objects/COCSyncError__c.object
<CustomObject>
    <fields>
        <fullName>DataSyncDate_Time__c</fullName>
        <label>DataSyncDate/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ErrorMessages__c</fullName>
        <label>ErrorMessages</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SyncType_del__c</fullName>
        <label>SyncType</label>
        <picklist>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Insurer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Valuation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>COCSyncError</label>
    <nameField>
        <displayFormat>COCSyncErr-{0000}</displayFormat>
        <label>COCSyncErrors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COCSyncErrors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>